Updated from Publii

--- a/newsletter.html
+++ b/newsletter.html
@@ -46,6 +46,7 @@
                 
                 <form class="signup-form" action="https://join.maxwell-cross.com/subscription/form" method="post">
                     <input type="hidden" name="nonce">
+                    <input type="hidden" name="redirect" value="https://maxwell-cross.com/thank-you">
                     
                     <div class="input-group">
                         <input 
