Updated from Publii

--- a/newsletter.html
+++ b/newsletter.html
@@ -44,9 +44,8 @@
                     <li>First access to new courses and resources</li>
                 </ul>
                 
-                <form class="signup-form" action="https://join.maxwell-cross.com/subscription/form" method="post">
+                <form class="signup-form" action="https://join.maxwell-cross.com/subscription/form?redirect=https://maxwell-cross.com/thank-you" method="post">
                     <input type="hidden" name="nonce">
-                    <input type="hidden" name="redirect" value="https://maxwell-cross.com/thank-you">
                     
                     <div class="input-group">
                         <input 
