Updated from Publii

--- a/newsletter.html
+++ b/newsletter.html
@@ -44,7 +44,7 @@
                     <li>First access to new courses and resources</li>
                 </ul>
                 
-                <form class="signup-form" action="https://join.maxwell-cross.com/subscription/form?redirect=https://maxwell-cross.com/thank-you" method="post">
+                <form class="signup-form" action="https://join.maxwell-cross.com/subscription/form" method="post">
                     <input type="hidden" name="nonce">
                     
                     <div class="input-group">
