Updated from Publii

--- a/404.html
+++ b/404.html
@@ -23,7 +23,11 @@
                 font-family: var(--mc-font-body);
             }</style><script type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"Maxwell Cross","url":"https://maxwell-cross.com/"}</script><noscript><style>img[loading] {
                     opacity: 1;
-                }</style></noscript></head><body class="mc-body error-template"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet"><style>/* 404 Page Styles */
+                }</style></noscript><script async src="https://www.googletagmanager.com/gtag/js?id=G-23PLTHNRJY"></script><script>window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-23PLTHNRJY');</script></head><body class="mc-body error-template"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet"><style>/* 404 Page Styles */
 .mc-404 {
     background-color: #050505;
     min-height: 100vh;
